--- a/mqtt.html
+++ b/mqtt.html
@@ -30,6 +30,7 @@
     background: radial-gradient(circle at top, #202b4d 0, #050814 46%, #02030a 100%);
     color: var(--text-main);
     transition: background .25s ease, color .25s ease;
+    font-size: 16px;
   }
 
   body.theme-light {
@@ -90,13 +91,13 @@
   }
 
   .title-main {
-    font-size:20px;
+    font-size:22px;
     font-weight:700;
     letter-spacing:0.02em;
   }
 
   .title-sub {
-    font-size:12px;
+    font-size:14px;
     color:var(--text-sub);
   }
 
@@ -105,7 +106,7 @@
     flex-wrap:wrap;
     gap:8px;
     align-items:center;
-    justify-content:flex-start; /* 좌측 정렬 */
+    justify-content:flex-start;
   }
 
   .theme-toggle {
@@ -114,7 +115,7 @@
     border:1px solid rgba(148,163,184,0.65);
     background:rgba(15,23,42,0.9);
     color:#e5e7eb;
-    font-size:14px;
+    font-size:15px;
     display:inline-flex;
     align-items:center;
     justify-content:center;
@@ -137,7 +138,7 @@
   .chip {
     border-radius:999px;
     padding:4px 10px;
-    font-size:11px;
+    font-size:12px;
     display:inline-flex;
     align-items:center;
     gap:6px;
@@ -153,13 +154,13 @@
   }
 
   .chip-label {
-    font-size:10px;
+    font-size:11px;
     text-transform:uppercase;
     letter-spacing:0.09em;
   }
 
   .chip-value {
-    font-size:11px;
+    font-size:12px;
     font-weight:500;
     color:var(--text-main);
   }
@@ -181,6 +182,38 @@
     border-color:rgba(55,255,121,0.6);
     background:var(--accent-soft);
     color:var(--ok);
+    padding:3px 12px; /* ON LINE pill과 높이 맞춤 */
+  }
+
+  /* 장비 연결 상태 버튼 */
+  .device-conn-pill {
+    border-radius:999px;
+    padding:3px 12px;
+    font-size:11px;
+    border:1px solid var(--border-subtle);
+    background:rgba(10,14,30,0.9);
+    color:var(--text-sub);
+    min-width:80px;
+    text-align:center;
+    cursor:default;
+  }
+  .device-conn-pill.online {
+    background:var(--accent-soft);
+    border-color:rgba(55,255,121,0.9);
+    color:var(--ok);
+    box-shadow:0 0 10px rgba(55,255,121,0.7);
+  }
+  .device-conn-pill.offline {
+    background:rgba(127,29,29,0.30);
+    border-color:rgba(239,68,68,0.95);
+    color:#fecaca;
+    box-shadow:0 0 8px rgba(239,68,68,0.8);
+  }
+  body.theme-light .device-conn-pill.online {
+    background:rgba(22,163,74,0.12);
+  }
+  body.theme-light .device-conn-pill.offline {
+    background:rgba(248,113,113,0.12);
   }
 
   .card {
@@ -225,7 +258,7 @@
   }
 
   .card-title {
-    font-size:13px;
+    font-size:14px;
     font-weight:600;
     text-transform:uppercase;
     letter-spacing:0.14em;
@@ -235,15 +268,15 @@
   body.theme-light .card-title { color:#4b5563; }
 
   .card-sub {
-    font-size:11px;
+    font-size:12px;
     color:var(--text-sub);
   }
 
   .tag-pill {
-    font-size:10px;
+    font-size:11px;
     text-transform:uppercase;
     letter-spacing:0.12em;
-    padding:3px 8px;
+    padding:5px 10px;
     border-radius:999px;
     border:1px solid rgba(95,120,200,0.7);
     background:rgba(8,10,24,0.9);
@@ -267,6 +300,17 @@
     box-shadow:0 0 12px rgba(78,201,255,0.9);
   }
 
+  /* RESET 전용 스타일 */
+  .tag-pill.reset-pill {
+    cursor:pointer;
+    transition:transform .12s, box-shadow .12s, filter .12s;
+  }
+  .tag-pill.reset-pill:hover {
+    filter:brightness(1.1);
+    transform:translateY(-0.5px);
+    box-shadow:0 0 12px rgba(248,250,252,0.5);
+  }
+
   .device-status-card {
     margin-top:4px;
     padding:8px 9px;
@@ -277,7 +321,7 @@
     align-items:center;
     justify-content:space-between;
     gap:6px;
-    font-size:11px;
+    font-size:12px;
     position:relative;
     z-index:1;
   }
@@ -290,14 +334,14 @@
   .device-status-left { display:flex; flex-direction:column; gap:2px; }
 
   .dev-status-title {
-    font-size:12px;
+    font-size:13px;
     font-weight:600;
     color:#dfe6ff;
   }
 
   body.theme-light .dev-status-title { color:#1f2937; }
 
-  .dev-status-sub { font-size:10px; color:var(--text-sub); }
+  .dev-status-sub { font-size:11px; color:var(--text-sub); }
 
   .device-status-right { display:flex; align-items:center; gap:6px; }
 
@@ -315,11 +359,11 @@
   }
 
   .status-label {
-    font-size:12px;
+    font-size:13px;
     font-weight:600;
   }
 
-  .uptime-text { font-size:10px; color:var(--text-sub); }
+  .uptime-text { font-size:11px; color:var(--text-sub); }
 
   .table-wrap {
     position:relative;
@@ -342,7 +386,7 @@
     width:100%;
     min-width:520px;
     border-collapse:collapse;
-    font-size:11px;
+    font-size:13px;
   }
 
   thead {
@@ -374,7 +418,7 @@
 
   th .unit {
     display:block;
-    font-size:9px;
+    font-size:11px;
     color:var(--text-sub);
   }
 
@@ -402,38 +446,43 @@
 
   .node-id {
     font-weight:600;
-    font-size:11px;
+    font-size:13px;
     color:#e8ecff;
   }
 
   body.theme-light .node-id { color:#111827; }
 
+  /* 테이블 숫자/NA용: 배경/테두리 없는 텍스트 */
   .badge {
-    display:inline-flex;
-    align-items:center;
-    justify-content:center;
-    min-width:28px;
-    padding:2px 5px;
-    border-radius:999px;
-    border:1px solid rgba(105,120,200,0.85);
-    background:rgba(12,16,32,0.98);
-    font-size:10px;
+    display:inline-block;
+    font-size:13px;
     color:var(--text-main);
+    background:transparent;
+    border:none;
+    padding:0;
+    border-radius:0;
+    min-width:0;
   }
 
   body.theme-light .badge {
-    background:#ffffff;
-    border-color:#c7d2fe;
+    background:transparent;
     color:#111827;
   }
 
   .badge-null {
-    opacity:0.45;
-    font-size:9px;
+    display:inline-block;
+    font-size:13px;
+    color:var(--text-sub);
+    background:transparent;
+    border:none;
+    padding:0;
+    border-radius:0;
+    min-width:0;
+    opacity:1;
   }
 
   .rss {
-    font-size:10px;
+    font-size:12px;
     color:var(--text-sub);
   }
 
@@ -448,7 +497,7 @@
     border:1px solid rgba(80,100,220,0.7);
     background:rgba(10,14,34,0.9);
     cursor:pointer;
-    font-size:10px;
+    font-size:12px;
     color:#c9d3ff;
     position:relative;
     overflow:hidden;
@@ -500,8 +549,8 @@
     display:flex;
     flex-wrap:wrap;
     gap:6px;
-    margin-top:12px; /* 약간 더 아래로 */
-    font-size:10px;
+    margin-top:12px;
+    font-size:12px;
     color:var(--text-sub);
   }
 
@@ -526,7 +575,7 @@
     display:flex;
     flex-wrap:wrap;
     gap:6px;
-    font-size:10px;
+    font-size:12px;
     color:var(--text-sub);
     align-items:center;
   }
@@ -536,6 +585,7 @@
     border-radius:999px;
     border:1px solid rgba(70,90,160,0.8);
     background:rgba(4,7,18,0.96);
+    font-size:12px;
   }
 
   body.theme-light .metric-item {
@@ -550,7 +600,7 @@
     border:1px solid rgba(60,80,150,0.8);
     background:rgba(5,10,24,0.95);
     color:var(--text-sub);
-    font-size:11px;
+    font-size:12px;
     display:inline-flex;
     align-items:center;
     gap:5px;
@@ -581,7 +631,7 @@
     border:1px solid rgba(40,60,120,0.7);
     max-height:120px;
     overflow:auto;
-    font-size:10px;
+    font-size:12px;
     display:none;
   }
 
@@ -600,6 +650,64 @@
     margin-right:4px;
   }
 
+  /* RESET 모달 */
+  .modal-backdrop {
+    position:fixed;
+    inset:0;
+    background:rgba(0,0,0,0.55);
+    display:none;
+    align-items:center;
+    justify-content:center;
+    z-index:999;
+  }
+  .modal-box {
+    background:#020617;
+    border-radius:14px;
+    padding:18px 18px 14px;
+    border:1px solid rgba(148,163,184,0.6);
+    max-width:320px;
+    width:80%;
+    color:#e5e7eb;
+    box-shadow:0 18px 40px rgba(0,0,0,0.7);
+  }
+  body.theme-light .modal-box {
+    background:#f9fafb;
+    color:#111827;
+    border-color:#cbd5f5;
+  }
+  .modal-title {
+    font-size:14px;
+    margin-bottom:14px;
+  }
+  .modal-actions {
+    display:flex;
+    justify-content:flex-end;
+    gap:8px;
+  }
+  .modal-btn {
+    border-radius:999px;
+    padding:6px 14px;
+    font-size:13px;
+    border:1px solid rgba(148,163,184,0.8);
+    background:transparent;
+    color:#e5e7eb;
+    cursor:pointer;
+  }
+  body.theme-light .modal-btn {
+    color:#111827;
+    background:#e5e7eb;
+    border-color:#cbd5f5;
+  }
+  .modal-btn.primary {
+    border-color:rgba(52,211,153,0.85);
+    background:#16a34a;
+    color:#ecfdf5;
+  }
+  body.theme-light .modal-btn.primary {
+    background:#22c55e;
+    border-color:#16a34a;
+  }
+
   @media (max-width: 600px){
     .page { padding:12px 6px 18px; }
     .title-main { font-size:19px; }
@@ -615,12 +723,10 @@
     }
     th .unit { font-size:10px; }
     .node-id { font-size:13px; }
-    .badge {
-      min-width:auto;
-      padding:2px 4px;
+    .badge,
+    .badge-null {
       font-size:13px;
     }
-    .badge-null { font-size:11px; }
     .rss { font-size:13px; }
     .btn-led {
       min-width:34px;
@@ -645,6 +751,13 @@
       font-size:13px;
       padding:4px 9px;
     }
+    /*  모바일(세로 360px 기준)에서 로그 창 폭을 맞춤 */
+    .log-box {
+      width:100%;
+      max-width:360px;
+      margin-left:auto;
+      margin-right:auto;
+    }
   }
 </style>
 </head>
@@ -657,7 +770,8 @@
         <div class="title-badge"></div>
         <div class="title-text">
           <div class="title-main">LoRa Mesh Gateway Monitor</div>
-          <div class="title-sub">MQTT로 노드 상태 모니터링 & LED 제어</div>
+          <!-- 상단 설명 텍스트 -->
+          <div class="title-sub">모든 Mesh 노드의 상태 모니터링 &amp; LED 제어</div>
         </div>
       </div>
       <button id="themeToggle" class="theme-toggle" type="button">
@@ -671,10 +785,13 @@
         <span class="chip-dot" id="mqttDot"></span>
         <span class="chip-value" id="mqttState">연결안됨</span>
       </div>
-      <div class="chip ok">
-        <span class="chip-label">BROKER</span>
-        <span class="chip-value" id="brokerLabel">broker.hivemq.com</span>
+
+      <!-- 장비 연결 상태: ON LINE / OFF LINE -->
+      <div class="chip">
+        <span class="chip-label">장비연결</span>
+        <button id="deviceConn" type="button" class="device-conn-pill offline">OFF LINE</button>
       </div>
+
       <div class="chip" id="nodeCountChip">
         <span class="chip-label">NODES</span>
         <span class="chip-value"><span id="nodeCount">0</span>개</span>
@@ -686,11 +803,13 @@
     <div class="card-header">
       <div>
         <div class="card-title">Nodes Overview</div>
-        <div class="card-sub">모든 Mesh 노드의 상태 모니터링 & LED 제어</div>
+        <!-- 설명 문구 삭제 -->
+        <div class="card-sub"></div>
       </div>
-      <div class="tag-pill">
+      <!-- RESET 버튼 (MQTT 이용) -->
+      <div class="tag-pill reset-pill" id="resetPill" onclick="openResetDialog()">
         <span class="dot"></span>
-        LIVE STREAM
+        <span>RESET</span>
       </div>
     </div>
 
@@ -749,8 +868,20 @@
   </div>
 </div>
 
+<!-- RESET 확인용 커스텀 모달 -->
+<div id="resetModal" class="modal-backdrop">
+  <div class="modal-box">
+    <div class="modal-title">RESET 명령을 전송하겠습니까?</div>
+    <div class="modal-actions">
+      <button class="modal-btn" type="button" onclick="closeResetDialog()">취소</button>
+      <button class="modal-btn primary" type="button" onclick="confirmReset()">전송</button>
+    </div>
+  </div>
+</div>
+
 <script>
 const MQTT_URL = "wss://broker.hivemq.com:8884/mqtt";
+
 let client;
 let nodes = {};
 let lastPacket = 0;
@@ -758,9 +889,9 @@ const startTime = Date.now();
 
 const mqttDot   = document.getElementById("mqttDot");
 const mqttState = document.getElementById("mqttState");
-const brokerLabel = document.getElementById("brokerLabel");
 const nodeCountEl = document.getElementById("nodeCount");
 const nodeCountChip = document.getElementById("nodeCountChip");
+const deviceConn = document.getElementById("deviceConn");
 
 const devStatusDot  = document.getElementById("devStatusDot");
 const devStatusLabel= document.getElementById("devStatusLabel");
@@ -776,6 +907,8 @@ const btnLog  = document.getElementById("btnLog");
 
 const themeToggle = document.getElementById("themeToggle");
 const themeIcon   = document.getElementById("themeIcon");
+
+const resetModal  = document.getElementById("resetModal");
 
 function applyTheme(theme){
   const isLight = (theme === "light");
@@ -833,7 +966,7 @@ function connectMQTT(){
   client.on("message", (topic, msg)=>{
     try {
       const id = Number(topic.split("/")[2]);
-      if (!id || id === 99) return;
+      if (!id || id === 99 || !topic.startsWith("lora/node/")) return;
 
       const data = JSON.parse(msg);
       const now = Date.now();
@@ -896,7 +1029,7 @@ function renderTable(){
     tr.appendChild(tdId);
 
     function cellVal(v, digits=1, type=""){
-      if(v==null) return `<span class="badge badge-null">NA</span>`;
+      if(v==null) return `<span class="badge-null">NA</span>`;
       const num = Number(v);
       if(type==="bat" && num <= 3.0){
         return `<span class="badge bat-low">${num.toFixed(digits)}</span>`;
@@ -956,6 +1089,7 @@ function renderTable(){
 function sendLED(id, checked){
   if(!client || !client.connected) {
     addLog("[LED] MQTT 미연결");
+    alert("MQTT가 연결되지 않았습니다. 잠시 후 다시 시도하세요.");
     return;
   }
   client.publish(`lora/node/${id}/cmd`, checked?"1":"0");
@@ -985,7 +1119,62 @@ function updateDeviceStatus(){
     devStatusDot.classList.remove("ok");
     devStatusLabel.textContent = "No Active Node";
   }
+
+  // 장비 연결 상태: MQTT 연결 + 노드 OK 기준
+  const online = (client && client.connected && anyOk);
+  if(deviceConn){
+    if(online){
+      deviceConn.classList.remove("offline");
+      deviceConn.classList.add("online");
+      deviceConn.textContent = "ON LINE";
+    }else{
+      deviceConn.classList.remove("online");
+      deviceConn.classList.add("offline");
+      deviceConn.textContent = "OFF LINE";
+    }
+  }
 }
+
+/* RESET 다이얼로그 열기 */
+function openResetDialog(){
+  if(!client || !client.connected){
+    alert("MQTT가 연결되지 않았습니다. RESET 명령을 보낼 수 없습니다.");
+    addLog("[RESET] MQTT 미연결 → 명령 전송 불가");
+    return;
+  }
+  if(resetModal){
+    resetModal.style.display = "flex";
+  }
+}
+
+/* RESET 다이얼로그 닫기 */
+function closeResetDialog(){
+  if(resetModal){
+    resetModal.style.display = "none";
+  }
+}
+
+/* RESET: MQTT 토픽으로 리셋 명령 전송 */
+function softReset(){
+  if(!client || !client.connected){
+    addLog("[RESET] MQTT 미연결 → 명령 전송 불가");
+    return;
+  }
+
+  const topic   = "lora/gateway/cmd";
+  const payload = "reset";
+
+  client.publish(topic, payload);
+  addLog(`[RESET] MQTT → ${topic} : ${payload}`);
+}
+
+/* 모달에서 '전송' 버튼 클릭 */
+function confirmReset(){
+  closeResetDialog();
+  softReset();
+}
+
+setInterval(updateDeviceStatus, 1000);
 </script>
 
 </body>
