--- a/door.html
+++ b/door.html
@@ -17,42 +17,106 @@
 
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #f5f5f5;
+      background: #f3f4f6; /* 라이트 그레이 */
       color: #222;
       min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: flex-start;
       padding: 16px 8px;
+      transition: background 0.25s ease, color 0.25s ease;
+    }
+
+    /* 야간 모드 */
+    body.night-mode {
+      background: #020617; /* 아주 짙은 남색 */
+      color: #e5e7eb;
     }
 
     .container {
       width: 100%;
-      max-width: 360px;
+      max-width: 380px;
       background: #ffffff;
-      border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-      padding: 16px;
+      border-radius: 18px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.14);
+      padding: 16px 16px 14px;
+      transition: background 0.25s ease, box-shadow 0.25s ease;
     }
 
-    /* 제목: Georgia + 한 단계 크게 + 입체감 */
+    body.night-mode .container {
+      background: #0f172a;
+      box-shadow: 0 10px 30px rgba(15,23,42,0.8);
+    }
+
+    /* 상단 타이틀 + 모드 토글 */
+    .header-row {
+      position: relative;
+      margin-bottom: 4px;
+      padding: 0 44px;           /* 우측 버튼 공간 */
+      display: flex;
+      justify-content: center;   /* 제목을 센터로 */
+      align-items: center;
+    }
+
     .title {
       text-align: center;
-      font-family: Georgia, "Times New Roman", serif;
-      font-size: clamp(2.2rem, 9vw, 3.1rem);
+      font-family: "Georgia", "Times New Roman", serif;
+      font-size: clamp(1.8rem, 8vw, 2.6rem);
       font-weight: 800;
-      margin-bottom: 4px;
-      color: #222;
+      color: #111827;
+      display: inline-block;
+      transform: translateX(6px);  /* 살짝 우측으로 이동 */
+      /* 입체감 */
       text-shadow:
-        0 2px 0 rgba(255,255,255,0.8),
-        0 3px 4px rgba(0,0,0,0.3);
+        0 1px 0 #f9fafb,
+        0 3px 6px rgba(15, 23, 42, 0.35),
+        0 8px 20px rgba(15, 23, 42, 0.18);
+    }
+
+    body.night-mode .title {
+      color: #e5e7eb;
+      text-shadow:
+        0 1px 0 #020617,
+        0 4px 14px rgba(0, 0, 0, 0.9);
+    }
+
+    .mode-toggle-btn {
+      position: absolute;
+      top: 50%;
+      right: 0;
+      transform: translateY(-50%);
+      width: 34px;        /* 축소 */
+      height: 34px;
+      border-radius: 50%;
+      border: none;
+      background: #e5e7eb;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 0.95rem;
+      cursor: pointer;
+      transition: background 0.2s ease, box-shadow 0.2s ease;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    }
+
+    .mode-toggle-btn:active {
+      box-shadow: 0 1px 3px rgba(0,0,0,0.25);
+    }
+
+    body.night-mode .mode-toggle-btn {
+      background: #1e293b;
+      box-shadow: 0 3px 10px rgba(15,23,42,0.9);
     }
 
     .subtitle {
-      text-align: center;
+      text-align: center; /* 센터 배치 */
       font-size: 0.75rem;
       color: #666;
       margin-bottom: 16px;
+    }
+
+    body.night-mode .subtitle {
+      color: #9ca3af;
     }
 
     .status-row {
@@ -68,25 +132,43 @@
       border-radius: 999px;
       font-size: 0.75rem;
       font-weight: 600;
-      background: #eee;
-      color: #555;
+      background: #e5e5ea; /* 살짝 진한 회색 */
+      color: #333;
     }
 
     .status-pill.ok {
-      background: #e5f8eb;
+      background: #c8f2d5;
       color: #1a7f3b;
     }
 
     .status-pill.bad {
-      background: #ffecec;
-      color: #d13838;
+      background: #ffd1d1;
+      color: #b91c1c;
+    }
+
+    body.night-mode .status-pill {
+      background: #1e293b;
+      color: #e5e7eb;
+    }
+    body.night-mode .status-pill.ok {
+      background: rgba(22,163,74,0.18);
+      color: #4ade80;
+    }
+    body.night-mode .status-pill.bad {
+      background: rgba(248,113,113,0.2);
+      color: #fecaca;
     }
 
     .card {
-      border-radius: 12px;
-      background: #fafafa;
+      border-radius: 14px;
+      background: #f5f5f7;  /* 본문보다 살짝 진한, 부드러운 그레이 */
       padding: 12px;
       margin-bottom: 12px;
+      transition: background 0.25s ease;
+    }
+
+    body.night-mode .card {
+      background: #111827;
     }
 
     .card-header {
@@ -100,52 +182,80 @@
       text-align: center;
     }
 
-    /* 밝기: 라벨/값 동일 폰트, 진한 그레이, [lx] 표기 */
-    .lux-label {
+    body.night-mode .card-header {
+      color: #cbd5f5;
+    }
+
+    /* 밝기/값 동일 폰트 & Dark Gray */
+    .lux-label,
+    .lux-value {
       text-align: center;
       font-size: 1.1rem;
-      font-weight: 700;
-      color: #333;
+      font-weight: 600;
+      color: #333333;
+    }
+
+    .lux-label {
       margin-bottom: 4px;
     }
 
     .lux-value {
-      font-size: 1.1rem;
-      font-weight: 700;
-      text-align: center;
-      margin: 4px 0;
-      color: #333;
+      margin-top: 2px;
+    }
+
+    body.night-mode .lux-label,
+    body.night-mode .lux-value {
+      color: #e5e7eb;
     }
 
     .button-wrap {
       text-align: center;
     }
 
-    /* 큰 파란 Open/Close 버튼 */
+    /* Open/Close 버튼 – 네모형 타원, Georgia, 입체감 */
     .led-btn {
       display: inline-block;
       width: 100%;
-      padding: 30px;          /* 버튼 높이 크게 */
-      font-size: 2rem;        /* 폰트 크게 */
-      font-weight: 700;
-      border-radius: 16px;
+      padding: 36px 30px;
+      font-family: "Georgia", "Times New Roman", serif;
+      font-size: 2rem;
+      font-weight: 800;
+      border-radius: 24px;  /* 네모형 타원 */
       border: none;
       cursor: pointer;
-      background: #0A84FF;    /* 블루 계열 */
+      background: linear-gradient(145deg, #3b82f6, #1d4ed8);
       color: #fff;
-      box-shadow: 0 4px 12px rgba(10,132,255,0.35);
-      transition: transform 0.1s ease, box-shadow 0.1s ease, opacity 0.1s ease, background 0.1s ease;
+      box-shadow:
+        0 10px 18px rgba(15, 23, 42, 0.45),
+        inset 0 2px 4px rgba(255, 255, 255, 0.25);
+      transition:
+        transform 0.1s ease,
+        box-shadow 0.1s ease,
+        opacity 0.1s ease,
+        background 0.2s ease;
+    }
+
+    .led-btn:hover {
+      background: linear-gradient(145deg, #2563eb, #1d4ed8);
     }
 
     .led-btn:active {
-      transform: translateY(1px);
-      box-shadow: 0 2px 8px rgba(10,132,255,0.3);
-      background: #0060d1;    /* 눌렀을 때 */
-      opacity: 0.97;
+      transform: translateY(2px); /* 눌린 느낌만 */
+      box-shadow:
+        0 4px 10px rgba(15, 23, 42, 0.7),
+        inset 0 1px 2px rgba(0, 0, 0, 0.35);
+      opacity: 0.96;
+    }
+
+    body.night-mode .led-btn {
+      background: linear-gradient(145deg, #1d4ed8, #1e40af);
+      box-shadow:
+        0 10px 22px rgba(15, 23, 42, 0.9),
+        inset 0 2px 4px rgba(255, 255, 255, 0.1);
     }
 
     .door-state-row {
-      margin-top: 16px;
+      margin-top: 26px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -158,10 +268,10 @@
     }
 
     .door-state-badge {
-      min-width: 70px;
+      min-width: 80px;
       text-align: center;
-      padding: 4px 12px;
-      border-radius: 8px;
+      padding: 4px 14px;
+      border-radius: 10px;
       font-weight: 700;
       color: #ffffff;
       background: #2f3d4f; /* 기본 Close 색 */
@@ -175,6 +285,10 @@
       background: #2f3d4f;
     }
 
+    body.night-mode .door-state-badge.door-open {
+      background: #16a34a;
+    }
+
     .footer {
       margin-top: 8px;
       font-size: 0.7rem;
@@ -186,16 +300,39 @@
       display: flex;
       justify-content: space-between;
       margin-bottom: 2px;
+      gap: 6px;
     }
 
     .footer-small {
       font-size: 0.68rem;
     }
+
+    body.night-mode .footer {
+      color: #9ca3af;
+    }
+
+    /* 모바일 세로 레이아웃 보정 */
+    @media (max-width: 480px) {
+      body {
+        padding: 12px 8px;
+        align-items: stretch;
+      }
+      .container {
+        max-width: 100%;
+        border-radius: 16px;
+      }
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="title">Door Control</div>
+    <div class="header-row">
+      <div class="title">Door Control</div>
+      <!-- 주간/야간 모드 토글 버튼 (해/달) -->
+      <button id="mode-toggle-btn" class="mode-toggle-btn" aria-label="Toggle day/night mode">
+       ☀️
+      </button>
+    </div>
     <div class="subtitle">LoRa(Node) ↔ Gateway ↔ MQTT ↔ Web</div>
 
     <!-- 상태 표시 -->
@@ -255,7 +392,7 @@
 
     const clientId = "WEB-" + Math.random().toString(16).substr(2, 8);
 
-    // URL 방식 + Paho.Client 사용 (원본 그대로)
+    // URL 방식 + Paho.Client 사용
     const client = new Paho.Client(MQTT_URL, clientId);
 
     /***************** DOM 요소 *****************/
@@ -267,8 +404,10 @@
     const rssi2El          = document.getElementById("rssi2");
     const lastUpdateEl     = document.getElementById("last-update");
     const ledButton        = document.getElementById("led-btn");
+    const modeToggleBtn    = document.getElementById("mode-toggle-btn");
 
     let lastDataTime = 0; // 마지막 센서 데이터 수신 시간(ms)
+    let isNightMode = false;
 
     /***************** 상태 업데이트 유틸 *****************/
     function setMqttStatus(connected) {
@@ -300,6 +439,22 @@
       const now = new Date();
       lastUpdateEl.textContent = now.toLocaleString();
     }
+
+    /***************** 야간/주간 모드 토글 *****************/
+    function applyMode() {
+      if (isNightMode) {
+        document.body.classList.add("night-mode");
+        modeToggleBtn.textContent = "🌙";
+      } else {
+        document.body.classList.remove("night-mode");
+        modeToggleBtn.textContent = "☀️";
+      }
+    }
+
+    modeToggleBtn.addEventListener("click", () => {
+      isNightMode = !isNightMode;
+      applyMode();
+    });
 
     /***************** MQTT Event Handler *****************/
     client.onConnectionLost = function (responseObject) {
@@ -375,19 +530,13 @@
       const msg = new Paho.Message("PULSE");
       msg.destinationName = TOPIC_LED_CMD;
       client.send(msg);
-
-      ledButton.disabled = true;
-      ledButton.textContent = "전송 중...";
-      setTimeout(() => {
-        ledButton.disabled = false;
-        ledButton.textContent = "Open/Close";
-      }, 1000);
     });
 
     /***************** 주기적으로 장비 연결 상태 갱신 *****************/
     setInterval(updateDeviceStatus, 5000);
 
-    /***************** 시작 시 MQTT 연결 *****************/
+    /***************** 시작 시 MQTT 연결 & 기본 모드 적용 *****************/
+    applyMode();
     connectMQTT();
   </script>
 </body>
